# humanoid_gait_generation_by_MPC

./: README.md
Trajectory_Free_Linear_Model_Predictive_Control_for_Stable_Walking_in_the_Presence_of_Strong_Perturbations/: CMakeLists.txt  generate_trajectory.cpp  implementation_technique.md
